objects/OBJ2__c.object
<CustomObject>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_TExt__c</fullName>
        <label>NEW TExt</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OBJ2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OBJ2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ2s</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Mobile_field</fullName>
        <active>false</active>
        <errorConditionFormula>Mobile__c  &lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Wrong value</errorMessage>
    </validationRules>
</CustomObject>